# ha-bragerone

./: .gitignore  .pre-commit-config.yaml  DEPENDENCY_GUIDE.md  Dockerfile.dev  Dockerfile.devhass  LICENSE  README.md  SOLUTION_SUMMARY.md  __init__.py  docker-compose.yml  hacs.json  pyproject.toml
.config/: configuration.yaml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: copilot-instructions.md  handoff-context.md  prompt-template.md  renovate.json
.github/workflows/: ci.yml  ha-integration-test.yml  hacs.yml  labeler.yml  release-drafter.yml  release.yml
custom_components/habragerone/: __init__.py  binary_sensor.py  bootstrap.py  button.py  command_write.py  config_flow.py  const.py  diagnkstics.py  diagnostics.py  entity_common.py  manifest.json  number.py  runtime.py  select.py  sensor.py  switch.py  token_store.py
custom_components/habragerone/translations/: en.json  pl.json
docs/: PYPI_SETUP.md
scripts/: README.md  dev.sh  release.sh  setup.sh
tests/: conftest.py  test_bootstrap_classification.py  test_bootstrap_filtering.py  test_command_write.py  test_entity_naming.py  test_sensor.py
